# circulation-core

./: .gitignore  local_analytics_provider.py  metadata_layer.py  opds.py  opds_import.py  pyproject.toml  requirements-base.txt  requirements-dev.txt  s3.py  testing.py  tox.ini
model/: configuration.py  constants.py  licensing.py
src/simplified/core/: scripts.py  testing.py
tests/: conftest.py  test_analytics.py  test_app_server.py  test_authentication_for_opds.py  test_cdn.py  test_circulation_data.py  test_config.py  test_coverage.py  test_entrypoint.py  test_equivalency.py  test_external_list.py  test_external_search.py  test_facets.py  test_lane.py  test_local_analytics_provider.py  test_log.py  test_marc.py  test_metadata.py  test_mirror_uploader.py  test_monitor.py  test_opds.py  test_opds2_import.py  test_opds_import.py  test_opensearch.py  test_overdrive.py  test_personal_names.py  test_problem_detail.py  test_s3.py  test_scripts.py  test_selftest.py  test_summary_evaluator.py  test_user_profile.py
tests/classifiers/: test_age.py  test_bic.py  test_bisac.py  test_classifier.py  test_ddc.py  test_keyword.py  test_lcc.py  test_overdrive.py  test_rbdigital.py  test_simplified.py
tests/lcp/: test_credential.py
tests/models/: test_admin.py  test_appeal.py  test_cachedfeed.py  test_circulationevent.py  test_classification.py  test_collection.py  test_complaint.py  test_configuration.py  test_contributor.py  test_coverage.py  test_credential.py  test_customlist.py  test_datasource.py  test_edition.py  test_hasfulltablecache.py  test_identifier.py  test_integrationclient.py  test_library.py  test_licensing.py  test_listeners.py  test_measurement.py  test_model.py  test_patron.py  test_resource.py  test_work.py
tests/python_expression_dsl/: test_evaluator.py  test_parser.py
tests/util/: test_flask_util.py  test_http.py  test_languages.py  test_opds_writer.py  test_string_helpers.py  test_util.py  test_web_publication_manifest.py  test_worker_pools.py  test_xml_parser.py
